# fastapi-tailwindcss-daisyui-starter

./: README.md  main.py  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js
fastapi_tailwindcss_daisyui_starter/config/: config.py
fastapi_tailwindcss_daisyui_starter/templates/: footer.html  header.html  hero.html  index.html
static/css/: tailwindcss.css
