[tool.poetry]
name = "fastapi-tailwindcss-daisyui-starter"
version = "0.1.0"
description = ""
authors = ["Magnesium- <yyong007@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.2"
jinja2 = "^3.1.4"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
arel = "^0.3.0"
pydantic-settings = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
